<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="4">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_speak_english_button"
            android:tag="doyouspeakenglish"
            android:onClick="playSound"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_evening_button"
            android:tag="goodevening"
            android:onClick="playSound"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_button"
            android:tag="hello"
            android:onClick="playSound"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_are_you_button"
            android:tag="howareyou"
            android:onClick="playSound"
            app:layout_column="1"
            app:layout_row="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_live_in_button"
            android:tag="ilivein"
            android:onClick="playSound"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name_is_button"
            android:tag="mynameis"
            android:onClick="playSound"
            app:layout_column="1"
            app:layout_row="2"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_button"
            android:tag="please"
            android:onClick="playSound"
            app:layout_column="0"
            app:layout_row="3"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_button"
            android:tag="welcome"
            android:onClick="playSound"
            app:layout_column="1"
            app:layout_row="3"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>